@@ -1,4 +1,4 @@
-/******************************************************************************
+/*
  * Copyright (c) 2002 - 2006 IBM Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -7,22 +7,25 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *****************************************************************************/
+ */
 package com.ibm.wala.cast.tree.impl;
 
-import java.util.NoSuchElementException;
-
 import com.ibm.wala.cast.tree.CAst;
+import com.ibm.wala.cast.tree.CAstLeafNode;
 import com.ibm.wala.cast.tree.CAstNode;
 import com.ibm.wala.cast.util.CAstPrinter;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 /**
- * An implementation of CAst, i.e. a simple factory for creating capa ast nodes. This class simply creates generic nodes with a kind
- * field, and either an array of children or a constant values. Note that there is no easy way to mutate these trees; do not change
- * this (see CAstNode for the rationale for this rule).
- * 
+ * An implementation of CAst, i.e. a simple factory for creating capa ast nodes. This class simply
+ * creates generic nodes with a kind field, and either an array of children or a constant values.
+ * Note that there is no easy way to mutate these trees; do not change this (see CAstNode for the
+ * rationale for this rule).
+ *
  * @author Julian Dolby (dolby@us.ibm.com)
- * 
  */
 public class CAstImpl implements CAst {
   private int nextID = 0;
@@ -33,17 +36,23 @@ public class CAstImpl implements CAst {
   }
 
   protected static class CAstNodeImpl implements CAstNode {
-    protected final CAstNode[] cs;
+    protected final List<CAstNode> cs;
 
     protected final int kind;
 
-    protected CAstNodeImpl(int kind, CAstNode[] cs) {
+    protected CAstNodeImpl(int kind, List<CAstNode> cs) {
       this.kind = kind;
       this.cs = cs;
 
-      for (int i = 0; i < cs.length; i++)
-        assert cs[i] != null : "argument " + i + " is null for node kind " + kind + " [" + CAstPrinter.entityKindAsString(kind)
-            + "]";
+      for (int i = 0; i < cs.size(); i++)
+        assert cs.get(i) != null
+            : "argument "
+                + i
+                + " is null for node kind "
+                + kind
+                + " ["
+                + CAstPrinter.entityKindAsString(kind)
+                + ']';
     }
 
     @Override
@@ -57,17 +66,8 @@ public class CAstImpl implements CAst {
     }
 
     @Override
-    public CAstNode getChild(int n) {
-      try {
-        return cs[n];
-      } catch (ArrayIndexOutOfBoundsException e) {
-        throw new NoSuchElementException(n + " of " + CAstPrinter.print(this));
-      }
-    }
-
-    @Override
-    public int getChildCount() {
-      return cs.length;
+    public List<CAstNode> getChildren() {
+      return cs;
     }
 
     @Override
@@ -79,7 +79,9 @@ public class CAstImpl implements CAst {
     public int hashCode() {
       int code = getKind() * (getChildCount() + 13);
       for (int i = 0; i < getChildCount() && i < 15; i++) {
-        code *= getChild(i).getKind();
+        if (getChild(i) != null) {
+          code *= getChild(i).getKind();
+        }
       }
 
       return code;
@@ -87,54 +89,61 @@ public class CAstImpl implements CAst {
   }
 
   @Override
-  public CAstNode makeNode(final int kind, final CAstNode[] cs) {
+  public CAstNode makeNode(final int kind, final List<CAstNode> cs) {
     return new CAstNodeImpl(kind, cs);
   }
 
   @Override
   public CAstNode makeNode(int kind, CAstNode c1, CAstNode[] cs) {
-    CAstNode[] children = new CAstNode[cs.length + 1];
-    children[0] = c1;
-    System.arraycopy(cs, 0, children, 1, cs.length);
+    List<CAstNode> children = new ArrayList<>(cs.length + 1);
+    children.add(c1);
+    children.addAll(Arrays.asList(cs));
     return makeNode(kind, children);
   }
 
   @Override
   public CAstNode makeNode(int kind) {
-    return makeNode(kind, new CAstNode[0]);
+    return makeNode(kind, Collections.emptyList());
   }
 
   @Override
   public CAstNode makeNode(int kind, CAstNode c1) {
-    return makeNode(kind, new CAstNode[] { c1 });
+    return makeNode(kind, Collections.singletonList(c1));
   }
 
   @Override
   public CAstNode makeNode(int kind, CAstNode c1, CAstNode c2) {
-    return makeNode(kind, new CAstNode[] { c1, c2 });
+    return makeNode(kind, Arrays.asList(c1, c2));
   }
 
   @Override
   public CAstNode makeNode(int kind, CAstNode c1, CAstNode c2, CAstNode c3) {
-    return makeNode(kind, new CAstNode[] { c1, c2, c3 });
+    return makeNode(kind, Arrays.asList(c1, c2, c3));
   }
 
   @Override
   public CAstNode makeNode(int kind, CAstNode c1, CAstNode c2, CAstNode c3, CAstNode c4) {
-    return makeNode(kind, new CAstNode[] { c1, c2, c3, c4 });
+    return makeNode(kind, Arrays.asList(c1, c2, c3, c4));
   }
 
   @Override
-  public CAstNode makeNode(int kind, CAstNode c1, CAstNode c2, CAstNode c3, CAstNode c4, CAstNode c5) {
-    return makeNode(kind, new CAstNode[] { c1, c2, c3, c4, c5 });
+  public CAstNode makeNode(
+      int kind, CAstNode c1, CAstNode c2, CAstNode c3, CAstNode c4, CAstNode c5) {
+    return makeNode(kind, Arrays.asList(c1, c2, c3, c4, c5));
   }
 
   @Override
-  public CAstNode makeNode(int kind, CAstNode c1, CAstNode c2, CAstNode c3, CAstNode c4, CAstNode c5, CAstNode c6) {
-    return makeNode(kind, new CAstNode[] { c1, c2, c3, c4, c5, c6 });
+  public CAstNode makeNode(
+      int kind, CAstNode c1, CAstNode c2, CAstNode c3, CAstNode c4, CAstNode c5, CAstNode c6) {
+    return makeNode(kind, Arrays.asList(c1, c2, c3, c4, c5, c6));
   }
 
-  protected static class CAstValueImpl implements CAstNode {
+  @Override
+  public CAstNode makeNode(int kind, CAstNode... cs) {
+    return makeNode(kind, Arrays.asList(cs));
+  }
+
+  protected static class CAstValueImpl implements CAstLeafNode {
     protected final Object value;
 
     protected CAstValueImpl(Object value) {
@@ -149,16 +158,6 @@ public class CAstImpl implements CAst {
     @Override
     public Object getValue() {
       return value;
-    }
-
-    @Override
-    public CAstNode getChild(int n) {
-      throw new NoSuchElementException();
-    }
-
-    @Override
-    public int getChildCount() {
-      return 0;
     }
 
     @Override
@@ -184,32 +183,31 @@ public class CAstImpl implements CAst {
 
   @Override
   public CAstNode makeConstant(char value) {
-    return makeConstant(new Character(value));
+    return makeConstant(Character.valueOf(value));
   }
 
   @Override
   public CAstNode makeConstant(short value) {
-    return makeConstant(new Short(value));
+    return makeConstant(Short.valueOf(value));
   }
 
   @Override
   public CAstNode makeConstant(int value) {
-    return makeConstant(new Integer(value));
+    return makeConstant(Integer.valueOf(value));
   }
 
   @Override
   public CAstNode makeConstant(long value) {
-    return makeConstant(new Long(value));
+    return makeConstant(Long.valueOf(value));
   }
 
   @Override
   public CAstNode makeConstant(float value) {
-    return makeConstant(new Float(value));
+    return makeConstant(Float.valueOf(value));
   }
 
   @Override
   public CAstNode makeConstant(double value) {
-    return makeConstant(new Double(value));
+    return makeConstant(Double.valueOf(value));
   }
-
 }
