@@ -1,4 +1,4 @@
-/*******************************************************************************
+/*
  * Copyright (c) 2002 - 2006 IBM Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -7,22 +7,14 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *******************************************************************************/
+ */
 package com.ibm.wala.core.tests.basic;
-
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-
-import org.junit.Assert;
-import org.junit.Test;
 
 import com.ibm.wala.core.tests.util.WalaTestCase;
 import com.ibm.wala.util.collections.BimodalMap;
 import com.ibm.wala.util.collections.HashSetFactory;
 import com.ibm.wala.util.collections.Iterator2Collection;
+import com.ibm.wala.util.collections.Iterator2Iterable;
 import com.ibm.wala.util.collections.SmallMap;
 import com.ibm.wala.util.graph.Graph;
 import com.ibm.wala.util.graph.NumberedGraph;
@@ -54,21 +46,23 @@ import com.ibm.wala.util.intset.SemiSparseMutableIntSet;
 import com.ibm.wala.util.intset.SemiSparseMutableIntSetFactory;
 import com.ibm.wala.util.intset.SparseIntSet;
 import com.ibm.wala.util.intset.SparseLongSet;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import org.junit.Assert;
+import org.junit.Test;
 
-/**
- * JUnit tests for some primitive operations.
- */
+/** JUnit tests for some primitive operations. */
+@SuppressWarnings("UnnecessaryBoxing")
 public class PrimitivesTest extends WalaTestCase {
 
-
-  /**
-   * Test the MutableSparseIntSet implementation
-   */
+  /** Test the MutableSparseIntSet implementation */
   private static void doMutableIntSet(MutableIntSetFactory<?> factory) {
     MutableIntSet v = factory.parse("{9,17}");
     MutableIntSet w = factory.make(new int[] {});
-    MutableIntSet x = factory.make(new int[] { 7, 4, 2, 4, 2, 2 });
-    MutableIntSet y = factory.make(new int[] { 7, 7, 7, 2, 7, 1 });
+    MutableIntSet x = factory.make(new int[] {7, 4, 2, 4, 2, 2});
+    MutableIntSet y = factory.make(new int[] {7, 7, 7, 2, 7, 1});
     MutableIntSet z = factory.parse("{ 9 }");
 
     System.err.println(w); // { }
@@ -115,7 +109,9 @@ public class PrimitivesTest extends WalaTestCase {
     System.err.println(x); // { 2 4 7 }
     Assert.assertTrue(temp.sameValue(x));
 
-    MutableIntSet a = factory.parse("{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59}");
+    MutableIntSet a =
+        factory.parse(
+            "{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59}");
     System.err.println(a); // { 1 3 5 7 9 11 13 15 17 19 21 23 25 27 29 31 33
     // 35
     // 37 39 41 43 45 47 49 51 53 55 57 59 }
@@ -125,7 +121,9 @@ public class PrimitivesTest extends WalaTestCase {
     a.add(100);
     Assert.assertTrue(a.sameValue(a));
 
-    MutableIntSet b = factory.parse("{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59,100}");
+    MutableIntSet b =
+        factory.parse(
+            "{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59,100}");
     Assert.assertTrue(a.sameValue(b));
     Assert.assertTrue(a.isSubset(b));
 
@@ -137,7 +135,9 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertFalse(f.sameValue(b));
     Assert.assertTrue(f.isSubset(b));
 
-    IntSet tmp = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63}");
+    IntSet tmp =
+        factory.parse(
+            "{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63}");
     f = IntSetUtil.diff(b, tmp, factory);
     System.err.println(f);
     Assert.assertFalse(f.sameValue(b));
@@ -149,7 +149,9 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertFalse(f.contains(59));
     Assert.assertTrue(f.contains(100));
 
-    tmp = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63,100}");
+    tmp =
+        factory.parse(
+            "{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63,100}");
     f = IntSetUtil.diff(b, tmp, factory);
     System.err.println(f);
     Assert.assertFalse(f.sameValue(b));
@@ -179,10 +181,16 @@ public class PrimitivesTest extends WalaTestCase {
     temp2 = factory.make();
     Assert.assertTrue(temp2.sameValue(a));
 
-    a = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63}");
-    b = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,52,54,56,58,60,62}");
-    MutableIntSet c = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50}");
-    MutableIntSet d = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50}");
+    a =
+        factory.parse(
+            "{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63}");
+    b =
+        factory.parse(
+            "{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,52,54,56,58,60,62}");
+    MutableIntSet c =
+        factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50}");
+    MutableIntSet d =
+        factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50}");
     MutableIntSet e = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34}");
 
     Assert.assertTrue(e.isSubset(d));
@@ -242,7 +250,9 @@ public class PrimitivesTest extends WalaTestCase {
     a.addAll(b);
     Assert.assertFalse(a.sameValue(c));
 
-    a = factory.parse("{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59}");
+    a =
+        factory.parse(
+            "{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59}");
     System.err.println(a); // { 1 3 5 7 9 11 13 15 17 19 21 23 25 27 29 31 33
     // 35
     // 37 39 41 43 45 47 49 51 53 55 57 59 }
@@ -252,7 +262,9 @@ public class PrimitivesTest extends WalaTestCase {
     a.add(100);
     Assert.assertTrue(a.sameValue(a));
 
-    b = factory.parse("{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59,100}");
+    b =
+        factory.parse(
+            "{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59,100}");
     Assert.assertTrue(a.sameValue(b));
     Assert.assertTrue(a.isSubset(b));
 
@@ -277,14 +289,14 @@ public class PrimitivesTest extends WalaTestCase {
     temp2 = factory.make();
     Assert.assertTrue(temp2.sameValue(a));
 
-    for (int idx = 500; idx < 550;) {
+    for (int idx = 500; idx < 550; ) {
       for (int xx = 0; xx < 50; xx++, idx++) {
         temp2.add(idx);
       }
       System.err.println(temp2);
     }
 
-    for (int idx = 3000; idx < 3200;) {
+    for (int idx = 3000; idx < 3200; ) {
       for (int xx = 0; xx < 50; xx++, idx++) {
         temp2.add(idx);
       }
@@ -293,11 +305,11 @@ public class PrimitivesTest extends WalaTestCase {
 
     temp2.clear();
     Assert.assertTrue(temp2.isEmpty());
-    
+
     temp2 = factory.make();
     Assert.assertTrue(temp2.sameValue(a));
 
-    for (int idx = 500; idx < 550;) {
+    for (int idx = 500; idx < 550; ) {
       for (int xx = 0; xx < 50; xx++, idx++) {
         temp2.add(idx);
       }
@@ -313,49 +325,42 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertTrue(temp2.isEmpty());
   }
 
-  /**
-   * Test the MutableSharedBitVectorIntSet implementation
-   */
-  @Test public void testMutableSharedBitVectorIntSet() {
+  /** Test the MutableSharedBitVectorIntSet implementation */
+  @Test
+  public void testMutableSharedBitVectorIntSet() {
     doMutableIntSet(new MutableSharedBitVectorIntSetFactory());
   }
 
-  /**
-   * Test the MutableSparseIntSet implementation
-   */
-  @Test public void testMutableSparseIntSet() {
+  /** Test the MutableSparseIntSet implementation */
+  @Test
+  public void testMutableSparseIntSet() {
     doMutableIntSet(new MutableSparseIntSetFactory());
   }
 
-  /**
-   * Test the BimodalMutableSparseIntSet implementation
-   */
-  @Test public void testBimodalMutableSparseIntSet() {
+  /** Test the BimodalMutableSparseIntSet implementation */
+  @Test
+  public void testBimodalMutableSparseIntSet() {
     doMutableIntSet(new BimodalMutableIntSetFactory());
   }
 
-  /**
-   * Test the BitVectorIntSet implementation
-   */
-  @Test public void testBitVectorIntSet() {
+  /** Test the BitVectorIntSet implementation */
+  @Test
+  public void testBitVectorIntSet() {
     doMutableIntSet(new BitVectorIntSetFactory());
   }
 
-  /**
-   * Test the SemiSparseMutableIntSet implementation
-   */
-  @Test public void testSemiSparseMutableIntSet() {
+  /** Test the SemiSparseMutableIntSet implementation */
+  @Test
+  public void testSemiSparseMutableIntSet() {
     doMutableIntSet(new SemiSparseMutableIntSetFactory());
   }
 
-  /**
-   * Test the MutableSparseIntSet implementation
-   */
+  /** Test the MutableSparseIntSet implementation */
   private static void doMutableLongSet(MutableLongSetFactory factory) {
     MutableLongSet v = factory.parse("{9,17}");
     MutableLongSet w = factory.make(new long[] {});
-    MutableLongSet x = factory.make(new long[] { 7, 4, 2, 4, 2, 2 });
-    MutableLongSet y = factory.make(new long[] { 7, 7, 7, 2, 7, 1 });
+    MutableLongSet x = factory.make(new long[] {7, 4, 2, 4, 2, 2});
+    MutableLongSet y = factory.make(new long[] {7, 7, 7, 2, 7, 1});
     MutableLongSet z = factory.parse("{ 9 }");
 
     System.err.println(w); // { }
@@ -402,7 +407,9 @@ public class PrimitivesTest extends WalaTestCase {
     System.err.println(x); // { 2 4 7 }
     Assert.assertTrue(temp.sameValue(x));
 
-    MutableLongSet a = factory.parse("{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59}");
+    MutableLongSet a =
+        factory.parse(
+            "{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59}");
     System.err.println(a); // { 1 3 5 7 9 11 13 15 17 19 21 23 25 27 29 31 33
     // 35
     // 37 39 41 43 45 47 49 51 53 55 57 59 }
@@ -412,7 +419,9 @@ public class PrimitivesTest extends WalaTestCase {
     a.add(100);
     Assert.assertTrue(a.sameValue(a));
 
-    MutableLongSet b = factory.parse("{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59,100}");
+    MutableLongSet b =
+        factory.parse(
+            "{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59,100}");
     Assert.assertTrue(a.sameValue(b));
     Assert.assertTrue(a.isSubset(b));
 
@@ -424,7 +433,9 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertFalse(f.sameValue(b));
     Assert.assertTrue(f.isSubset(b));
 
-    LongSet tmp = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63}");
+    LongSet tmp =
+        factory.parse(
+            "{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63}");
     f = LongSetUtil.diff(b, tmp, factory);
     System.err.println(f);
     Assert.assertFalse(f.sameValue(b));
@@ -436,7 +447,9 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertFalse(f.contains(59));
     Assert.assertTrue(f.contains(100));
 
-    tmp = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63,100}");
+    tmp =
+        factory.parse(
+            "{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63,100}");
     f = LongSetUtil.diff(b, tmp, factory);
     System.err.println(f);
     Assert.assertFalse(f.sameValue(b));
@@ -466,10 +479,16 @@ public class PrimitivesTest extends WalaTestCase {
     temp2 = factory.make();
     Assert.assertTrue(temp2.sameValue(a));
 
-    a = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63}");
-    b = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,52,54,56,58,60,62}");
-    MutableLongSet c = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50}");
-    MutableLongSet d = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50}");
+    a =
+        factory.parse(
+            "{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,51,53,55,57,59,61,63}");
+    b =
+        factory.parse(
+            "{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,52,54,56,58,60,62}");
+    MutableLongSet c =
+        factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50}");
+    MutableLongSet d =
+        factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50}");
     MutableLongSet e = factory.parse("{2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34}");
 
     Assert.assertTrue(e.isSubset(d));
@@ -529,7 +548,9 @@ public class PrimitivesTest extends WalaTestCase {
     a.addAll(b);
     Assert.assertFalse(a.sameValue(c));
 
-    a = factory.parse("{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59}");
+    a =
+        factory.parse(
+            "{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59}");
     System.err.println(a); // { 1 3 5 7 9 11 13 15 17 19 21 23 25 27 29 31 33
     // 35
     // 37 39 41 43 45 47 49 51 53 55 57 59 }
@@ -539,7 +560,9 @@ public class PrimitivesTest extends WalaTestCase {
     a.add(100);
     Assert.assertTrue(a.sameValue(a));
 
-    b = factory.parse("{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59,100}");
+    b =
+        factory.parse(
+            "{1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59,100}");
     Assert.assertTrue(a.sameValue(b));
     Assert.assertTrue(a.isSubset(b));
 
@@ -561,14 +584,14 @@ public class PrimitivesTest extends WalaTestCase {
     temp2 = factory.make();
     Assert.assertTrue(temp2.sameValue(a));
 
-    for (int idx = 500; idx < 550;) {
+    for (int idx = 500; idx < 550; ) {
       for (int xx = 0; xx < 50; xx++, idx++) {
         temp2.add(idx);
       }
       System.err.println(temp2);
     }
 
-    for (int idx = 3000; idx < 3200;) {
+    for (int idx = 3000; idx < 3200; ) {
       for (int xx = 0; xx < 50; xx++, idx++) {
         temp2.add(idx);
       }
@@ -578,7 +601,7 @@ public class PrimitivesTest extends WalaTestCase {
     temp2 = factory.make();
     Assert.assertTrue(temp2.sameValue(a));
 
-    for (int idx = 500; idx < 550;) {
+    for (int idx = 500; idx < 550; ) {
       for (int xx = 0; xx < 50; xx++, idx++) {
         temp2.add(idx);
       }
@@ -589,58 +612,58 @@ public class PrimitivesTest extends WalaTestCase {
       temp2.add(idx);
       System.err.println(temp2);
     }
-
   }
 
-  /**
-   * Test the MutableSparseLongSet implementation
-   */
-  @Test public void testMutableSparseLongSet() {
+  /** Test the MutableSparseLongSet implementation */
+  @Test
+  public void testMutableSparseLongSet() {
     doMutableLongSet(new MutableSparseLongSetFactory());
   }
 
-  @Test public void testSmallMap() {
+  @Test
+  public void testSmallMap() {
     SmallMap<Integer, Integer> M = new SmallMap<>();
-    Integer I1 = new Integer(1);
-    Integer I2 = new Integer(2);
-    Integer I3 = new Integer(3);
+    Integer I1 = Integer.valueOf(1);
+    Integer I2 = Integer.valueOf(2);
+    Integer I3 = Integer.valueOf(3);
     M.put(I1, I1);
     M.put(I2, I2);
     M.put(I3, I3);
 
-    Integer I = M.get(new Integer(2));
+    Integer I = M.get(Integer.valueOf(2));
     Assert.assertTrue(I != null);
     Assert.assertTrue(I.equals(I2));
 
-    I = M.get(new Integer(4));
+    I = M.get(Integer.valueOf(4));
     Assert.assertTrue(I == null);
 
-    I = M.put(new Integer(2), new Integer(3));
+    I = M.put(Integer.valueOf(2), Integer.valueOf(3));
     Assert.assertTrue(I.equals(I2));
     I = M.get(I2);
     Assert.assertTrue(I.equals(I3));
   }
 
-  @Test public void testBimodalMap() {
+  @Test
+  public void testBimodalMap() {
     Map<Integer, Integer> M = new BimodalMap<>(3);
-    Integer I1 = new Integer(1);
-    Integer I2 = new Integer(2);
-    Integer I3 = new Integer(3);
-    Integer I4 = new Integer(4);
-    Integer I5 = new Integer(5);
-    Integer I6 = new Integer(6);
+    Integer I1 = Integer.valueOf(1);
+    Integer I2 = Integer.valueOf(2);
+    Integer I3 = Integer.valueOf(3);
+    Integer I4 = Integer.valueOf(4);
+    Integer I5 = Integer.valueOf(5);
+    Integer I6 = Integer.valueOf(6);
     M.put(I1, I1);
     M.put(I2, I2);
     M.put(I3, I3);
 
-    Integer I = M.get(new Integer(2));
+    Integer I = M.get(Integer.valueOf(2));
     Assert.assertTrue(I != null);
     Assert.assertTrue(I.equals(I2));
 
-    I = M.get(new Integer(4));
+    I = M.get(Integer.valueOf(4));
     Assert.assertTrue(I == null);
 
-    I = M.put(new Integer(2), new Integer(3));
+    I = M.put(Integer.valueOf(2), Integer.valueOf(3));
     Assert.assertTrue(I.equals(I2));
     I = M.get(I2);
     Assert.assertTrue(I.equals(I3));
@@ -648,20 +671,21 @@ public class PrimitivesTest extends WalaTestCase {
     M.put(I4, I4);
     M.put(I5, I5);
     M.put(I6, I6);
-    I = M.get(new Integer(4));
+    I = M.get(Integer.valueOf(4));
     Assert.assertTrue(I != null);
     Assert.assertTrue(I.equals(I4));
 
-    I = M.get(new Integer(7));
+    I = M.get(Integer.valueOf(7));
     Assert.assertTrue(I == null);
 
-    I = M.put(new Integer(2), new Integer(6));
+    I = M.put(Integer.valueOf(2), Integer.valueOf(6));
     Assert.assertTrue(I.equals(I3));
     I = M.get(I2);
     Assert.assertTrue(I.equals(I6));
   }
 
-  @Test public void testBFSPathFinder() {
+  @Test
+  public void testBFSPathFinder() {
     NumberedGraph<Integer> G = makeBFSTestGraph();
 
     // path from 0 to 8
@@ -671,11 +695,12 @@ public class PrimitivesTest extends WalaTestCase {
     // path should be 8, 6, 4, 2, 0
     System.err.println("Path is " + p);
     for (int i = 0; i < p.size(); i++) {
-      Assert.assertTrue((p.get(i)).intValue() == new int[] { 8, 6, 4, 2, 0 }[i]);
+      Assert.assertTrue(p.get(i) == new int[] {8, 6, 4, 2, 0}[i]);
     }
   }
 
-  @Test public void testBoundedBFS() {
+  @Test
+  public void testBoundedBFS() {
     NumberedGraph<Integer> G = makeBFSTestGraph();
 
     BoundedBFSIterator<Integer> bfs = new BoundedBFSIterator<>(G, G.getNode(0), 0);
@@ -713,8 +738,7 @@ public class PrimitivesTest extends WalaTestCase {
 
     // add 10 nodes
     Integer[] nodes = new Integer[10];
-    for (int i = 0; i < nodes.length; i++)
-      G.addNode(nodes[i] = new Integer(i));
+    for (int i = 0; i < nodes.length; i++) G.addNode(nodes[i] = Integer.valueOf(i));
 
     // edges to i-1, i+1, i+2
     for (int i = 0; i < nodes.length; i++) {
@@ -731,14 +755,14 @@ public class PrimitivesTest extends WalaTestCase {
     return G;
   }
 
-  @Test public void testDominatorsA() {
+  @Test
+  public void testDominatorsA() {
     // test graph
     Graph<Object> G = SlowSparseNumberedGraph.make();
 
     // add nodes
     Object[] nodes = new Object[11];
-    for (int i = 0; i < nodes.length; i++)
-      G.addNode(nodes[i] = new Integer(i));
+    for (int i = 0; i < nodes.length; i++) G.addNode(nodes[i] = Integer.valueOf(i));
 
     // add edges
     G.addEdge(nodes[10], nodes[0]);
@@ -760,14 +784,13 @@ public class PrimitivesTest extends WalaTestCase {
 
     // Assert.assertions
     int i = 0;
-    Object[] desired4 = new Object[] { nodes[4], nodes[7], nodes[8], nodes[5], nodes[10] };
-    for (Iterator<Object> d4 = D.dominators(nodes[4]); d4.hasNext();)
-      Assert.assertTrue(d4.next() == desired4[i++]);
+    Object[] desired4 = new Object[] {nodes[4], nodes[7], nodes[8], nodes[5], nodes[10]};
+    for (Object d4 : Iterator2Iterable.make(D.dominators(nodes[4])))
+      Assert.assertTrue(d4 == desired4[i++]);
 
     int j = 0;
-    Object[] desired5 = new Object[] { nodes[8] };
-    for (Iterator<? extends Object> t4 = D.dominatorTree().getSuccNodes(nodes[5]); t4.hasNext();) {
-      Object o4 = t4.next();
+    Object[] desired5 = new Object[] {nodes[8]};
+    for (Object o4 : Iterator2Iterable.make(D.dominatorTree().getSuccNodes(nodes[5]))) {
       Object d = desired5[j++];
       boolean ok = (o4.equals(d));
       if (!ok) {
@@ -775,14 +798,17 @@ public class PrimitivesTest extends WalaTestCase {
         System.err.println("desired " + d);
         Assert.assertTrue(o4.equals(d));
       }
-      
     }
 
     Assert.assertTrue(D.dominatorTree().getSuccNodeCount(nodes[10]) == 5);
   }
 
-  @Test public void testBinaryIntegerRelation() {
-    byte[] impl = new byte[] { BasicNaturalRelation.SIMPLE, BasicNaturalRelation.TWO_LEVEL, BasicNaturalRelation.SIMPLE };
+  @Test
+  public void testBinaryIntegerRelation() {
+    byte[] impl =
+        new byte[] {
+          BasicNaturalRelation.SIMPLE, BasicNaturalRelation.TWO_LEVEL, BasicNaturalRelation.SIMPLE
+        };
     IBinaryNaturalRelation R = new BasicNaturalRelation(impl, BasicNaturalRelation.TWO_LEVEL);
     R.add(3, 5);
     R.add(3, 7);
@@ -790,8 +816,8 @@ public class PrimitivesTest extends WalaTestCase {
     R.add(3, 11);
     R.add(5, 1);
     int count = 0;
-    for (Iterator<IntPair> it = R.iterator(); it.hasNext();) {
-      System.err.println(it.next());
+    for (IntPair intPair : R) {
+      System.err.println(intPair);
       count++;
     }
     Assert.assertTrue(count == 5);
@@ -827,7 +853,8 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertTrue(R.getRelated(1).size() == 99);
   }
 
-  @Test public void testUnionFind() {
+  @Test
+  public void testUnionFind() {
     int SIZE = 10000;
     IntegerUnionFind uf = new IntegerUnionFind(SIZE);
     int count = countEquivalenceClasses(uf);
@@ -839,7 +866,9 @@ public class PrimitivesTest extends WalaTestCase {
 
     uf.union(7, SIZE - 1);
     Assert.assertTrue(uf.find(3) == uf.find(SIZE - 1));
-    Assert.assertTrue("Got uf.find(3)=" + uf.find(3), uf.find(3) == 3 || uf.find(3) == 7 || uf.find(3) == SIZE - 1);
+    Assert.assertTrue(
+        "Got uf.find(3)=" + uf.find(3),
+        uf.find(3) == 3 || uf.find(3) == 7 || uf.find(3) == SIZE - 1);
 
     for (int i = 0; i < SIZE - 1; i++) {
       uf.union(i, i + 1);
@@ -862,32 +891,38 @@ public class PrimitivesTest extends WalaTestCase {
   private static int countEquivalenceClasses(IntegerUnionFind uf) {
     HashSet<Integer> s = HashSetFactory.make();
     for (int i = 0; i < uf.size(); i++) {
-      s.add(new Integer(uf.find(i)));
+      s.add(Integer.valueOf(uf.find(i)));
     }
     return s.size();
   }
 
-  @Test public void testBitVector() {
+  @Test
+  public void testBitVector() {
     testSingleBitVector(new BitVector());
   }
 
-  @Test public void testOffsetBitVector0_10() {
+  @Test
+  public void testOffsetBitVector0_10() {
     testSingleBitVector(new OffsetBitVector(0, 10));
   }
 
-  @Test public void testOffsetBitVector10_10() {
+  @Test
+  public void testOffsetBitVector10_10() {
     testSingleBitVector(new OffsetBitVector(10, 10));
   }
 
-  @Test public void testOffsetBitVector50_10() {
+  @Test
+  public void testOffsetBitVector50_10() {
     testSingleBitVector(new OffsetBitVector(50, 10));
   }
 
-  @Test public void testOffsetBitVector50_50() {
+  @Test
+  public void testOffsetBitVector50_50() {
     testSingleBitVector(new OffsetBitVector(50, 50));
   }
 
-  @Test public void testOffsetBitVector100_10() {
+  @Test
+  public void testOffsetBitVector100_10() {
     testSingleBitVector(new OffsetBitVector(100, 10));
   }
 
@@ -905,8 +940,8 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertTrue(bv.get(59));
 
     {
-      boolean[] gets = new boolean[] { false, true, true };
-      int[] bits = new int[] { 0, 55, 59 };
+      boolean[] gets = new boolean[] {false, true, true};
+      int[] bits = new int[] {0, 55, 59};
       for (int i = 0, j = 0; i != -1; i = bv.nextSetBit(i + 1), j++) {
         Assert.assertTrue(i == bits[j]);
         Assert.assertTrue(bv.get(i) == gets[j]);
@@ -917,8 +952,8 @@ public class PrimitivesTest extends WalaTestCase {
 
     Assert.assertTrue("bv.max() is " + bv.max(), bv.max() == 77);
     {
-      boolean[] gets = new boolean[] { false, true, true, true };
-      int[] bits = new int[] { 0, 55, 59, 77 };
+      boolean[] gets = new boolean[] {false, true, true, true};
+      int[] bits = new int[] {0, 55, 59, 77};
       for (int i = 0, j = 0; i != -1; i = bv.nextSetBit(i + 1), j++) {
         Assert.assertTrue(i == bits[j]);
         Assert.assertTrue(bv.get(i) == gets[j]);
@@ -928,8 +963,8 @@ public class PrimitivesTest extends WalaTestCase {
     bv.set(3);
     Assert.assertTrue("bv.max() is " + bv.max(), bv.max() == 77);
     {
-      boolean[] gets = new boolean[] { false, true, true, true, true };
-      int[] bits = new int[] { 0, 3, 55, 59, 77 };
+      boolean[] gets = new boolean[] {false, true, true, true, true};
+      int[] bits = new int[] {0, 3, 55, 59, 77};
       for (int i = 0, j = 0; i != -1; i = bv.nextSetBit(i + 1), j++) {
         Assert.assertTrue(i == bits[j]);
         Assert.assertTrue(bv.get(i) == gets[j]);
@@ -939,23 +974,28 @@ public class PrimitivesTest extends WalaTestCase {
     System.err.println(bv);
   }
 
-  @Test public void testBitVectors() {
+  @Test
+  public void testBitVectors() {
     testBitVectors(new BitVector(), new BitVector());
   }
 
-  @Test public void testOffsetBitVectors150_10() {
+  @Test
+  public void testOffsetBitVectors150_10() {
     testBitVectors(new OffsetBitVector(150, 10), new OffsetBitVector(150, 10));
   }
 
-  @Test public void testOffsetBitVectors100_200_10() {
+  @Test
+  public void testOffsetBitVectors100_200_10() {
     testBitVectors(new OffsetBitVector(100, 10), new OffsetBitVector(200, 10));
   }
 
-  @Test public void testOffsetBitVectors100_25_10() {
+  @Test
+  public void testOffsetBitVectors100_25_10() {
     testBitVectors(new OffsetBitVector(100, 10), new OffsetBitVector(25, 10));
   }
 
-  @Test public void testOffsetBitVectors35_25_20_10() {
+  @Test
+  public void testOffsetBitVectors35_25_20_10() {
     testBitVectors(new OffsetBitVector(35, 20), new OffsetBitVector(25, 10));
   }
 
@@ -981,8 +1021,8 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertTrue("v1.max() is " + v1.max(), v1.max() == 202);
 
     {
-      boolean[] gets = new boolean[] { false, true, true, true, true, true, true };
-      int[] bits = new int[] { 0, 100, 101, 102, 200, 201, 202 };
+      boolean[] gets = new boolean[] {false, true, true, true, true, true, true};
+      int[] bits = new int[] {0, 100, 101, 102, 200, 201, 202};
       for (int i = 0, j = 0; i != -1; i = v1.nextSetBit(i + 1), j++) {
         Assert.assertTrue(i == bits[j]);
         Assert.assertTrue(v1.get(i) == gets[j]);
@@ -1010,8 +1050,8 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertTrue("v1.max() is " + v1.max(), v1.max() == 104);
 
     {
-      boolean[] gets = new boolean[] { false, true, true };
-      int[] bits = new int[] { 0, 103, 104 };
+      boolean[] gets = new boolean[] {false, true, true};
+      int[] bits = new int[] {0, 103, 104};
       for (int i = 0, j = 0; i != -1; i = v1.nextSetBit(i + 1), j++) {
         Assert.assertTrue(i == bits[j]);
         Assert.assertTrue(v1.get(i) == gets[j]);
@@ -1025,8 +1065,8 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertTrue("v1.max() is " + v1.max(), v1.max() == 105);
 
     {
-      boolean[] gets = new boolean[] { false, true, true, true, true, true, true };
-      int[] bits = new int[] { 0, 100, 101, 102, 103, 104, 105 };
+      boolean[] gets = new boolean[] {false, true, true, true, true, true, true};
+      int[] bits = new int[] {0, 100, 101, 102, 103, 104, 105};
       for (int i = 0, j = 0; i != -1; i = v1.nextSetBit(i + 1), j++) {
         Assert.assertTrue(i == bits[j]);
         Assert.assertTrue(v1.get(i) == gets[j]);
@@ -1038,8 +1078,8 @@ public class PrimitivesTest extends WalaTestCase {
     v1.andNot(v2);
 
     {
-      boolean[] gets = new boolean[] { false, true, true, true, true, true, true };
-      int[] bits = new int[] { 0, 100, 101, 102, 103, 104, 105 };
+      boolean[] gets = new boolean[] {false, true, true, true, true, true, true};
+      int[] bits = new int[] {0, 100, 101, 102, 103, 104, 105};
       for (int i = 0, j = 0; i != -1; i = v1.nextSetBit(i + 1), j++) {
         Assert.assertTrue(i == bits[j]);
         Assert.assertTrue(v1.get(i) == gets[j]);
@@ -1053,8 +1093,8 @@ public class PrimitivesTest extends WalaTestCase {
     v1.andNot(v2);
 
     {
-      boolean[] gets = new boolean[] { false, true, true, true, true };
-      int[] bits = new int[] { 0, 100, 103, 104, 105 };
+      boolean[] gets = new boolean[] {false, true, true, true, true};
+      int[] bits = new int[] {0, 100, 103, 104, 105};
       for (int i = 0, j = 0; i != -1; i = v1.nextSetBit(i + 1), j++) {
         Assert.assertTrue(i == bits[j]);
         Assert.assertTrue(v1.get(i) == gets[j]);
@@ -1080,8 +1120,8 @@ public class PrimitivesTest extends WalaTestCase {
     v1.xor(v2);
 
     {
-      boolean[] gets = new boolean[] { false, true, true, true, true };
-      int[] bits = new int[] { 0, 35, 103, 105, 206 };
+      boolean[] gets = new boolean[] {false, true, true, true, true};
+      int[] bits = new int[] {0, 35, 103, 105, 206};
       for (int i = 0, j = 0; i != -1; i = v1.nextSetBit(i + 1), j++) {
         Assert.assertTrue(i == bits[j]);
         Assert.assertTrue(v1.get(i) == gets[j]);
@@ -1282,7 +1322,8 @@ public class PrimitivesTest extends WalaTestCase {
     return v1;
   }
 
-  @Test public void testSpecificBugsInOffsetBitVectors() {
+  @Test
+  public void testSpecificBugsInOffsetBitVectors() {
     OffsetBitVector v1 = makeBigTestOffsetVector();
     System.err.println(v1);
 
@@ -1309,7 +1350,8 @@ public class PrimitivesTest extends WalaTestCase {
     Assert.assertTrue(v2.isSubset(v1));
   }
 
-  @Test public void testSpecificBugsInSemiSparseMutableIntSets() {
+  @Test
+  public void testSpecificBugsInSemiSparseMutableIntSets() {
     SemiSparseMutableIntSet v1 = new SemiSparseMutableIntSet();
     v1.add(54);
     v1.add(58);
