@@ -1,4 +1,4 @@
-/*******************************************************************************
+/*
  * Copyright (c) 2002 - 2006 IBM Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -7,21 +7,11 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *******************************************************************************/
+ */
 package com.ibm.wala.analysis.reflection;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
 
 import com.ibm.wala.analysis.typeInference.ConeType;
 import com.ibm.wala.analysis.typeInference.PointType;
-import com.ibm.wala.analysis.typeInference.SetType;
 import com.ibm.wala.analysis.typeInference.TypeAbstraction;
 import com.ibm.wala.cfg.ControlFlowGraph;
 import com.ibm.wala.cfg.InducedCFG;
@@ -57,27 +47,31 @@ import com.ibm.wala.types.MethodReference;
 import com.ibm.wala.types.TypeReference;
 import com.ibm.wala.util.collections.HashMapFactory;
 import com.ibm.wala.util.collections.HashSetFactory;
+import com.ibm.wala.util.collections.Iterator2Iterable;
 import com.ibm.wala.util.debug.Assertions;
 import com.ibm.wala.util.warnings.Warnings;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
-/**
- * Logic to interpret "factory" methods in context.
- */
+/** Logic to interpret "factory" methods in context. */
 public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
 
   /**
-   * A Map from CallerSiteContext -> Set <TypeReference>represents the types a factory method might create in a particular context
+   * A Map from CallerSiteContext -&gt; Set &lt;TypeReference&gt;represents the types a factory
+   * method might create in a particular context
    */
   private final Map<Context, Set<TypeReference>> map = HashMapFactory.make();
 
-  /**
-   * A cache of synthetic method implementations, indexed by Context
-   */
+  /** A cache of synthetic method implementations, indexed by Context */
   private final Map<Context, SpecializedFactoryMethod> syntheticMethodCache = HashMapFactory.make();
 
-  /**
-   * @param options governing analysis options
-   */
+  /** @param options governing analysis options */
   public FactoryBypassInterpreter(AnalysisOptions options, IAnalysisCacheView iAnalysisCacheView) {
     this.options = options;
     this.cache = iAnalysisCacheView;
@@ -108,7 +102,8 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     // MemberReference m = site.getCaller().getMethod().getReference();
     // ReflectionSummary summary = spec.getSummary(m);
     // if (summary != null) {
-    // Set<TypeReference> types = summary.getTypesForProgramLocation(site.getCallSite().getProgramCounter());
+    // Set<TypeReference> types =
+    // summary.getTypesForProgramLocation(site.getCallSite().getProgramCounter());
     // if (types != null) {
     // return types;
     // }
@@ -140,14 +135,13 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     if (node == null) {
       throw new IllegalArgumentException("node is null");
     }
-    if (node.getMethod().isSynthetic()) {
+    if (node.getMethod().isWalaSynthetic()) {
       SyntheticMethod s = (SyntheticMethod) node.getMethod();
       if (s.isFactoryMethod()) {
         return getTypesForContext(node.getContext()) != null;
       }
     }
     return false;
-
   }
 
   @Override
@@ -157,8 +151,8 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     }
     SpecializedFactoryMethod m = findOrCreateSpecializedFactoryMethod(node);
     HashSet<NewSiteReference> result = HashSetFactory.make(5);
-    for (Iterator<SSAInstruction> it = m.getAllocationStatements().iterator(); it.hasNext();) {
-      SSANewInstruction s = (SSANewInstruction) it.next();
+    for (SSAInstruction ssaInstruction : m.getAllocationStatements()) {
+      SSANewInstruction s = (SSANewInstruction) ssaInstruction;
       result.add(s.getNewSite());
     }
     return result.iterator();
@@ -200,10 +194,9 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       types = HashSetFactory.make(2);
       map.put(context, types);
     }
-    if (types.contains(type)) {
+    if (!types.add(type)) {
       return false;
     } else {
-      types.add(type);
       // update any extant synthetic method
       SpecializedFactoryMethod m = syntheticMethodCache.get(context);
       if (m != null) {
@@ -227,7 +220,8 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     if (node == null) {
       throw new IllegalArgumentException("node is null");
     }
-    return recordType(node.getMethod().getClassHierarchy(), node.getContext(), klass.getReference());
+    return recordType(
+        node.getMethod().getClassHierarchy(), node.getContext(), klass.getReference());
   }
 
   @Override
@@ -263,14 +257,16 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
   private SpecializedFactoryMethod findOrCreateSpecializedFactoryMethod(CGNode node) {
     SpecializedFactoryMethod m = syntheticMethodCache.get(node.getContext());
     if (m == null) {
-      Set types = getTypesForContext(node.getContext());
-      m = new SpecializedFactoryMethod((SummarizedMethod) node.getMethod(), node.getContext(), types);
+      Set<TypeReference> types = getTypesForContext(node.getContext());
+      m =
+          new SpecializedFactoryMethod(
+              (SummarizedMethod) node.getMethod(), node.getContext(), types);
       syntheticMethodCache.put(node.getContext(), m);
     }
     return m;
   }
 
-  public Set getCaughtExceptions(CGNode node) {
+  public Set<TypeReference> getCaughtExceptions(CGNode node) {
     if (node == null) {
       throw new IllegalArgumentException("node is null");
     }
@@ -312,7 +308,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     }
   }
 
-  public Iterator iterateCastTypes(CGNode node) {
+  public Iterator<TypeReference> iterateCastTypes(CGNode node) {
     if (node == null) {
       throw new IllegalArgumentException("node is null");
     }
@@ -345,32 +341,23 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
 
   protected class SpecializedFactoryMethod extends SpecializedMethod {
 
-    /**
-     * List of synthetic invoke instructions we model for this specialized instance.
-     */
-    final private ArrayList<SSAInstruction> calls = new ArrayList<SSAInstruction>();
+    /** List of synthetic invoke instructions we model for this specialized instance. */
+    private final ArrayList<SSAInstruction> calls = new ArrayList<>();
 
-    /**
-     * The method being modelled
-     */
+    /** The method being modelled */
     private final IMethod method;
 
-    /**
-     * Context being modelled
-     */
+    /** Context being modelled */
     private final Context context;
 
-    /**
-     * next free local value number;
-     */
+    /** next free local value number; */
     private int nextLocal;
 
-    /**
-     * value number for integer constant 1
-     */
+    /** value number for integer constant 1 */
     private int valueNumberForConstantOne = -1;
 
-    private final SSAInstructionFactory insts = declaringClass.getClassLoader().getInstructionFactory();
+    private final SSAInstructionFactory insts =
+        declaringClass.getClassLoader().getInstructionFactory();
 
     private void initValueNumberForConstantOne() {
       if (valueNumberForConstantOne == -1) {
@@ -378,7 +365,8 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       }
     }
 
-    protected SpecializedFactoryMethod(final SummarizedMethod m, Context context, final Set S) {
+    protected SpecializedFactoryMethod(
+        final SummarizedMethod m, Context context, final Set<TypeReference> S) {
       super(m, m.getDeclaringClass(), m.isStatic(), true);
 
       this.context = context;
@@ -393,8 +381,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       // add original statements from the method summary
       nextLocal = addOriginalStatements(m);
 
-      for (Iterator it = S.iterator(); it.hasNext();) {
-        TypeReference type = (TypeReference) it.next();
+      for (TypeReference type : S) {
         TypeAbstraction T = typeRef2TypeAbstraction(m.getClassHierarchy(), type);
         addStatementsForTypeAbstraction(T);
       }
@@ -428,7 +415,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
           if (((ConeType) T).isInterface()) {
             Set<IClass> implementors = T.getType().getClassHierarchy().getImplementors(ref);
             if (DEBUG) {
-              System.err.println(("Implementors for " + T + " " + implementors));
+              System.err.println(("Implementors for " + T + ' ' + implementors));
             }
             if (implementors.isEmpty()) {
               if (DEBUG) {
@@ -444,7 +431,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
           } else {
             Collection<IClass> subclasses = T.getType().getClassHierarchy().computeSubClasses(ref);
             if (DEBUG) {
-              System.err.println(("Subclasses for " + T + " " + subclasses));
+              System.err.println(("Subclasses for " + T + ' ' + subclasses));
             }
             if (subclasses.isEmpty()) {
               if (DEBUG) {
@@ -460,11 +447,6 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
         } else {
           Assertions.UNREACHABLE("Unexpected type " + T.getClass());
         }
-      } else if (T instanceof SetType) {
-        // This code has clearly bitrotted, since iteratePoints() returns an Iterator<TypeReference>
-        // and we need an Iterator<IClass>. Commenting out for now. --MS
-        Assertions.UNREACHABLE();
-        // addStatementsForSetOfTypes(((SetType) T).iteratePoints());
       } else {
         Assertions.UNREACHABLE("Unexpected type " + T.getClass());
       }
@@ -480,23 +462,24 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       }
     }
 
-    /**
-     * Set up a method summary which allocates and returns an instance of concrete type T.
-     * 
-     * @param T
-     */
+    /** Set up a method summary which allocates and returns an instance of concrete type T. */
     private void addStatementsForConcreteType(final TypeReference T) {
       int alloc = addStatementsForConcreteSimpleType(T);
       if (alloc == -1) {
         return;
       }
       if (T.isArrayType()) {
-        MethodReference init = MethodReference.findOrCreate(T, MethodReference.initAtom, MethodReference.defaultInitDesc);
-        CallSiteReference site = CallSiteReference.make(getCallSiteForType(T), init, IInvokeInstruction.Dispatch.SPECIAL);
+        MethodReference init =
+            MethodReference.findOrCreate(
+                T, MethodReference.initAtom, MethodReference.defaultInitDesc);
+        CallSiteReference site =
+            CallSiteReference.make(
+                getCallSiteForType(T), init, IInvokeInstruction.Dispatch.SPECIAL);
         int[] params = new int[1];
         params[0] = alloc;
         int exc = getExceptionsForType(T);
-        SSAInvokeInstruction s = insts.InvokeInstruction(allInstructions.size(), params, exc, site, null);
+        SSAInvokeInstruction s =
+            insts.InvokeInstruction(allInstructions.size(), params, exc, site, null);
         calls.add(s);
         allInstructions.add(s);
       }
@@ -506,8 +489,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       SSAInstruction[] original = m.getStatements(options.getSSAOptions());
       // local value number 1 is "this", so the next free value number is 2
       int nextLocal = 2;
-      for (int i = 0; i < original.length; i++) {
-        SSAInstruction s = original[i];
+      for (SSAInstruction s : original) {
         allInstructions.add(s);
         if (s instanceof SSAInvokeInstruction) {
           calls.add(s);
@@ -537,8 +519,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
         allInstructions.add(r);
       }
 
-      for (; it.hasNext();) {
-        IClass klass = it.next();
+      for (IClass klass : Iterator2Iterable.make(it)) {
         TypeReference T = klass.getReference();
         if (klass.isAbstract() || klass.isInterface() || typesAllocated.contains(T)) {
           continue;
@@ -548,7 +529,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
         NewSiteReference ref = NewSiteReference.make(getNewSiteForType(T), T);
         SSANewInstruction a = null;
         if (T.isArrayType()) {
-          int[] sizes = new int[((ArrayClass)klass).getDimensionality()];
+          int[] sizes = new int[((ArrayClass) klass).getDimensionality()];
           initValueNumberForConstantOne();
           Arrays.fill(sizes, valueNumberForConstantOne);
           a = insts.NewInstruction(allInstructions.size(), i, ref, sizes);
@@ -560,11 +541,17 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
         allInstructions.add(a);
         SSAReturnInstruction r = insts.ReturnInstruction(allInstructions.size(), i, false);
         allInstructions.add(r);
-        MethodReference init = MethodReference.findOrCreate(T, MethodReference.initAtom, MethodReference.defaultInitDesc);
-        CallSiteReference site = CallSiteReference.make(getCallSiteForType(T), init, IInvokeInstruction.Dispatch.SPECIAL);
+        MethodReference init =
+            MethodReference.findOrCreate(
+                T, MethodReference.initAtom, MethodReference.defaultInitDesc);
+        CallSiteReference site =
+            CallSiteReference.make(
+                getCallSiteForType(T), init, IInvokeInstruction.Dispatch.SPECIAL);
         int[] params = new int[1];
         params[0] = i;
-        SSAInvokeInstruction s = insts.InvokeInstruction(allInstructions.size(), params, getExceptionsForType(T), site, null);
+        SSAInvokeInstruction s =
+            insts.InvokeInstruction(
+                allInstructions.size(), params, getExceptionsForType(T), site, null);
         calls.add(s);
         allInstructions.add(s);
       }
@@ -579,9 +566,10 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     }
 
     /**
-     * Two specialized methods can be different, even if they represent the same source method. So, revert to object identity for
-     * testing equality. TODO: this is non-optimal; could try to re-use specialized methods that have the same context.
-     * 
+     * Two specialized methods can be different, even if they represent the same source method. So,
+     * revert to object identity for testing equality. TODO: this is non-optimal; could try to
+     * re-use specialized methods that have the same context.
+     *
      * @see java.lang.Object#equals(java.lang.Object)
      */
     @Override
@@ -603,15 +591,16 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     public SSAInstruction[] getStatements() {
       SSAInstruction[] result = new SSAInstruction[allInstructions.size()];
       int i = 0;
-      for (Iterator<SSAInstruction> it = allInstructions.iterator(); it.hasNext();) {
-        result[i++] = it.next();
+      for (SSAInstruction ssaInstruction : allInstructions) {
+        result[i++] = ssaInstruction;
       }
       return result;
     }
 
     @Override
     public IClass getDeclaringClass() {
-      assert method.getDeclaringClass() != null : "null declaring class for original method " + method;
+      assert method.getDeclaringClass() != null
+          : "null declaring class for original method " + method;
       return method.getDeclaringClass();
     }
 
@@ -634,10 +623,11 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       Map<Integer, ConstantValue> constants = null;
       if (valueNumberForConstantOne > -1) {
         constants = HashMapFactory.make(1);
-        constants.put(new Integer(valueNumberForConstantOne), new ConstantValue(new Integer(1)));
+        constants.put(valueNumberForConstantOne, new ConstantValue(Integer.valueOf(1)));
       }
 
-      return new SyntheticIR(this, context, new InducedCFG(instrs, this, context), instrs, options, constants);
+      return new SyntheticIR(
+          this, context, new InducedCFG(instrs, this, context), instrs, options, constants);
     }
   }
 }
